Created error messages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,4 @@
 name.required = O Campo Nome é Obrigatório
 name.shortLength = Insira Um Nome Com 3 ou Mais Caracteres
+email.required = O Campo Email é Obrigatório
+email.invalid = Por Favor Insira Um Email Válido
