--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,3 +2,6 @@ name.required = O Campo Nome é Obrigatório
 name.shortLength = Insira Um Nome Com 3 ou Mais Caracteres
 email.required = O Campo Email é Obrigatório
 email.invalid = Por Favor Insira Um Email Válido
+username.required = O Campo Nome do Usuário é Obrigatório
+password.required = O Campo de Senha é Obrigatório
+password.shortLength = Por favor, Insira uma Senha Com Mais de 3 Caracteres
