Começando as atividades

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,3 +5,4 @@ email.invalid = Por Favor Insira Um Email Válido
 username.required = O Campo Nome do Usuário é Obrigatório
 password.required = O Campo de Senha é Obrigatório
 password.shortLength = Por favor, Insira uma Senha Com Mais de 3 Caracteres
+description.required = A atividade precisa de um título 
