Fazendo uma relação de 1:1 de usuário com atividade, salvando e listando as atividades

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,3 +7,4 @@ password.required = O Campo de Senha é Obrigatório
 password.shortLength = Por favor, Insira uma Senha Com Mais de 3 Caracteres
 title.required = A Atividade Precisa De Um Título
 description.required = Por Favor, Insira Uma Pequena Descrição da Atividade
+user.required = Usuário Obrigatório
