Ajustando problemas na relação de atividade e tarefa

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,6 +5,6 @@ email.invalid = Por Favor Insira Um Email Válido
 username.required = O Campo Nome do Usuário é Obrigatório
 password.required = O Campo de Senha é Obrigatório
 password.shortLength = Por favor, Insira uma Senha Com Mais de 3 Caracteres
-title.required = A Atividade Precisa De Um Título
+title.required = O Campo Título é Obrigatório
 description.required = Por Favor, Insira Uma Pequena Descrição da Atividade
 user.required = Usuário Obrigatório
